--- a/CollegeManager/Views/Home/Index.cshtml
+++ b/CollegeManager/Views/Home/Index.cshtml
@@ -2,31 +2,29 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron" style="margin-top: 3%;">
+<div class="jumbotron" style=" width: 65%; margin: auto; margin-bottom: 5rem; ">
     <h1>College Manager</h1>
     <p class="lead">College Manager is a free web app for manage great Universities around the world</p>
     <p><a style="margin-top: 2%;" href="https://asp.net" class="btn btn-primary btn-lg">Start Managing &raquo;</a></p>
 </div>
 
-<div class="row">
+<div class="row" style="margin-top: 3em;width: 65%; margin: auto;">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            With college manager you can register professors, courses, subjects and students!
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p style="margin-top: 2em;"><a class="btn btn-default" href="~/Teacher/">Teacher registration &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Get more courses</h2>
+        <p>You can register as many courses as you need, linking them with professors and subjects.</p>
+        <p  style="margin-top: 2em;"><a class="btn btn-default" href="~/Home/Course">Check out courses &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Watch the performance</h2>
+        <p>With the college manager you can follow the performance of your students.</p>
+        <p style="margin-top: 2em;"><a class="btn btn-default" href="~/Home/Grades"> Follow the permormance' &raquo;</a></p>
     </div>
 </div>
 
