--- a/CollegeManager/Views/Home/Course.cshtml
+++ b/CollegeManager/Views/Home/Course.cshtml
@@ -1,39 +1,43 @@
-﻿<div class="container" ng-app="courses" ng-controller="courseCtrl" style="width: 90%; height: 80rem; background-color: #0d1117; padding:1%; margin-top:3%;">
-    @* INÍCIO DIV - panel panel-info *@
-    <div class="panel" style="border: 0.3px solid #8B949E; ">
+﻿<div ng-if="a= true" class="alert alert-success" role="alert" style="width: 70%; margin: auto; text-align:center;">
+    This is a success alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+</div>
+<div class="alert alert-danger" role="alert" style="width: 70%; margin: auto; text-align:center;">
+    This is a danger alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+</div>
+<div class="container" ng-app="courses" ng-controller="courseCtrl" style="width: 70%; height: 75rem; background-color: #0d1117; padding:1%;">
+    <div class="panel" style="border: none; background: #161b22;">
         <div class="panel-heading" style="border: none; background: #161b22; color: #C9D1D9;">Courses</div>
-
         <div class="panel-body" style="background: #0d1117; color: #8B949E;">
             <button type="button" class="btn btn-info" data-target="#AdicionarFuncionario" data-toggle="modal" style="border-radius: 25px; width: 38px;">
                 <span class="glyphicon glyphicon-plus"></span>
             </button>
         </div>
-
-        <table class="table" style="background: #0d1117; color: #8B949E;border: 0.2px solid #8B949E; ">
+        <table class="table" style="background: #0d1117; color: #161b22; border: none; ">
             <thead style="background-color: #161b22; border: none; color: white; ">
                 <tr>
-                    <th class="text-center" style="border-bottom: 0.5px solid #ddd">Course Id</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #ddd">Description</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #ddd">Duration</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #ddd">Min. Grade</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #ddd">Actions</th>
+                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">ID</th>
+                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Description</th>
+                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Duration</th>
+                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Category</th>
+                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Teacher</th>
+                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Actions</th>
                 </tr>
             </thead>
-
-            <tbody style="background: #0d1117; color: #8B949E;border: 0.2px solid #8B949E; ">
+            <tbody style="color: #8B949E; border: 0.2px solid #161b22;">
                 <tr ng-repeat="c in Courses">
                     <td class="text-center">{{c.CourseId}}</td>
-                    <td class="text-center">{{c.Description}}</td>
-                    <td class="text-center">{{c.Duration}}</td>
-                    <td class="text-center">{{c.MinGrade}}</td>
-                    <td class="text-center" style="width: 200px;">
-                        <a href="#" style="border-radius: 25px;"
+                    <td class="text-center">{{c.Name}}</td>
+                    <td class="text-center">{{c.Duration}}y</td>
+                    <td class="text-center">{{c.Category}}</td>
+                    <td class="text-center">{{c.TeacherId}}</td>
+                    <td class="text-center buttons" style="width: 200px;">
+                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;"
                            data-target="#AtualizarFuncionario"
                            data-toggle="modal" class="btn btn-success"
                            ng-click="atualizarFuncionarioPorId(func)">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a href="#" style="border-radius: 25px;"
+                        <a href="#" s style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;"
                            data-target="#ExcluirFuncionario"
                            id="btnExcluir"
                            data-toggle="modal" class="btn btn-danger"
@@ -43,110 +47,104 @@
                     </td>
                 </tr>
             </tbody>
-        </table>
+    </table>
 
-        @* INÍCIO MODAL - ADICIONAR FUNCIONÁRIO *@
-        <div class="modal" id="AdicionarFuncionario" role="dialog" style="width: 100%; padding-top: 8rem;">
-            <div class="modal-dialog" style="width: 40%; margin-top: 4%;">
-                <div class="modal-content" style="background: #0d1117;">
-                    <div class="modal-header">
-                        <h3 style="color: #C9D1D9;">New Course</h3>
-                    </div>
-                    <div class="modal-body">
-                        <form class="form-horizontal" name="AdicionarNovoFuncionarioForm">
-                            <div class="form-group" style="width: 100%; background: green;">
-                                <input class="form-control" readonly="readonly" name="funcionarioId" type="hidden" placeholder="Id Funcionário" style="margin: auto; min-width: 300px;" />
-                            </div>
-
-                            <div class="form-group">
-                                <input class="form-control" type="text" name="nome" ng-model="description" placeholder="Description" style="width:100%;" />
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" type="text" name="nome" ng-model="duration" placeholder="Duration" />
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" type="text" name="nome" ng-model="minGrade" placeholder="Min. Grade" />
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer" style="border: none;">
-                        <button type="button" class="btn btn-primary" id="btnSalvar" data-dismiss="modal" ng-click="addCourse()">Confirm</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="limparDados()">Cancel</button>
-                    </div>
+    <div class="modal" id="AdicionarFuncionario" role="dialog" style="width: 100%; padding-top: 8rem;">
+        <div class="modal-dialog" style="width: 40%; margin-top: 4%;">
+            <div class="modal-content" style="background: #0d1117;">
+                <div class="modal-header">
+                    <h3 style="color: #C9D1D9;">New Course</h3>
                 </div>
-            </div>
-        </div>
-        @* FIM MODAL - ADICIONAR FUNCIONÁRIO *@
-
-        @* INÍCIO MODAL - ATUALIZAR FUNCIONÁRIO *@
-        <div class="modal" id="AtualizarFuncionario" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="text-info">Atualizar Funcionário</h3>
-                    </div>
-                    <div class="modal-body" style="margin-left: 20px">
-                        <form class="form-horizontal" name="AtualizarForm">
-                            <div class="form-group">
-                                <input class="form-control" readonly="readonly" name="FuncionarioId" ng-model="AtualizadoFuncionarioId" type="hidden" placeholder="Funcionario Id" />
-                            </div>
-                            <div class="form-group">
-                                <label class="text-info"> Nome</label>
-                                <input class="form-control" name="Nome" ng-model="AtualizadoNome" type="text" placeholder="Nome" />
-                            </div>
-                            <div class="form-group">
-                                <label class="text-info"> Email</label>
-                                <input class="form-control" name="Email" ng-model="AtualizadoEmail" type="email" placeholder="Email" />
-                            </div>
-                            <div class="form-group">
-                                <label class="text-info"> Departamento</label>
-                                <input class="form-control" name="Departamento" ng-model="AtualizadoDepartamento" type="text" placeholder="Departamento" />
-                            </div>
-                            <div class="form-group">
-                                <label class="text-info"> Cargo</label>
-                                <input class="form-control" name="Cargo" ng-model="AtualizadoCargo" type="text" placeholder="Cargo" />
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" id="btnUpdate" data-dismiss="modal" ng-click="atualizarFuncionario()">
-                            Atualizar
-                        </button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        @* FIM MODAL - ATUALIZAR FUNCIONÁRIO *@
-
-        @* INÍCIO MODAL - EXCLUIR FUNCIONÁRIO *@
-
-        <div class="modal" role="dialog" id="ExcluirFuncionario">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="text-info">Você tem certeza que deseja excluir o Funcionário?</h3>
-                    </div>
-                    <div class="modal-body">
-                        <div>
-                            <p>Id do Funcionário : {{AtualizadoFuncionarioId}}</p>
-                            <p>Nome do Fucionário : {{AtualizadoNome}}</p>
+                <div class="modal-body">
+                    <form class="form-horizontal" name="AdicionarNovoFuncionarioForm">
+                        <div class="form-group" style="width: 100%; background: green;">
+                            <input class="form-control" readonly="readonly" name="funcionarioId" type="hidden" placeholder="Id Funcionário" style="margin: auto; min-width: 300px;" />
                         </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="excluirFuncionario(AtualizadoFuncionarioId)">Excluir</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-                    </div>
+
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="nome" ng-model="name" placeholder="Description" style="width:100%;" />
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="nome" ng-model="duration" placeholder="Duration (Years)" />
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="nome" ng-model="category" placeholder="Category" />
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="nome" ng-model="teacherId" placeholder="Teacher" />
+                        </div>
+                        <select class="form-control" ng-model="teacherId" required>
+                            <option ng-repeat="c in Teachers" value="{{c.TeacherId}}">{{c.Name}}</option>
+                        </select>
+                    </form>
+                </div>
+                <div class="modal-footer" style="border: none;">
+                    <button type="button" class="btn btn-primary" id="btnSalvar" data-dismiss="modal" ng-click="addCourse()">Confirm</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="limparDados()">Cancel</button>
                 </div>
             </div>
         </div>
-
-        @* FIM MODAL - EXCLUIR FUNCIONÁRIO *@
-
     </div>
-    @* FIM DIV - panel panel-info *@
-
+    <div class="modal" id="AtualizarFuncionario" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="text-info">Update Course</h3>
+                </div>
+                <div class="modal-body" style="margin-left: 20px">
+                    <form class="form-horizontal" name="AtualizarForm">
+                        <div class="form-group">
+                            <input class="form-control" readonly="readonly" name="FuncionarioId" ng-model="AtualizadoFuncionarioId" type="hidden" placeholder="Funcionario Id" />
+                        </div>
+                        <div class="form-group">
+                            <label class="text-info"> Nome</label>
+                            <input class="form-control" name="Nome" ng-model="AtualizadoNome" type="text" placeholder="Nome" />
+                        </div>
+                        <div class="form-group">
+                            <label class="text-info"> Email</label>
+                            <input class="form-control" name="Email" ng-model="AtualizadoEmail" type="email" placeholder="Email" />
+                        </div>
+                        <div class="form-group">
+                            <label class="text-info"> Departamento</label>
+                            <input class="form-control" name="Departamento" ng-model="AtualizadoDepartamento" type="text" placeholder="Departamento" />
+                        </div>
+                        <div class="form-group">
+                            <label class="text-info"> Cargo</label>
+                            <input class="form-control" name="Cargo" ng-model="AtualizadoCargo" type="text" placeholder="Cargo" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" id="btnUpdate" data-dismiss="modal" ng-click="atualizarFuncionario()">
+                        Atualizar
+                    </button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal" role="dialog" id="ExcluirFuncionario">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="text-info">Você tem certeza que deseja excluir o Funcionário?</h3>
+                </div>
+                <div class="modal-body">
+                    <div>
+                        <p>Id do Funcionário : {{AtualizadoFuncionarioId}}</p>
+                        <p>Nome do Fucionário : {{AtualizadoNome}}</p>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="excluirFuncionario(AtualizadoFuncionarioId)">Excluir</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+</div>
+
 
 @section scripts {
     <script src="~/AngularJsApp/Courses/Module.js"></script>
@@ -159,8 +157,24 @@
         width: 100%;
     }
 
-    input {
+    input, select {
+        border-radius: 25px !important;
         min-width: 70%;
         margin: auto;
+    }
+
+    td {
+        border: none;
+        font-size: 0.9em;
+        height: 5rem !important;
+        padding-top: 1.6em !important;
+    }
+
+    .buttons {
+        padding: 1.2rem !important;
+    }
+
+    th {
+        font-weight: 300;
     }
 </style>
