--- a/CollegeManager/Views/Teacher/Index.cshtml
+++ b/CollegeManager/Views/Teacher/Index.cshtml
@@ -1,35 +1,35 @@
-﻿<div class="container" ng-app="teachers" ng-controller="teacherCtrl" style="width: 90%; height: 85rem; background-color: #0d1117; padding:1%; margin-top:  1%;">
-    <div class="panel" style="border: 0.3px solid #8B949E; ">
+﻿<div class="container" ng-app="teachers" ng-controller="teacherCtrl" style="width: 70%; height: 75rem; background-color: #0d1117; padding: 1%; overflow-y: scroll;">
+    <div class="panel" style="background: #161b22;">
         <div class="panel-heading" style="border: none; background: #161b22; color: #C9D1D9;">Teachers</div>
-        <div class="panel-body" style="background: #0d1117; color: #8B949E;">
-            <button type="button" class="btn btn-info" data-target="#AdicionarFuncionario" data-toggle="modal" style="border-radius: 25px; width: 38px;">
+        <div class="panel-body" style="background: #0d1117; color: #8B949E; ">
+            <button type="button" class="btn btn-primary" data-target="#AdicionarFuncionario" data-toggle="modal" style="border-radius: 25px; width: 38px;">
                 <span class="glyphicon glyphicon-plus"></span>
             </button>
         </div>
-        <table class="table" style="background: #0d1117; color: #8B949E;border: 0.2px solid #8B949E; ">
+        <table class="table" style="background: #0d1117; color: #8B949E; border: 0.2px solid #161b22; ">
             <thead style="background-color: #161b22; border: none; color: white; ">
                 <tr>
-                    <th class="text-center" style="border-bottom: 0.5px solid #ddd">Teacher Id</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #ddd">Name</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #ddd">Birthday</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #ddd">Salary</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #ddd">Actions</th>
+                    <th class="text-center" style="border: 0.5px solid #161b22">Teacher Id</th>
+                    <th class="text-center" style="border: 0.5px solid #161b22">Name</th>
+                    <th class="text-center" style="border: 0.5px solid #161b22">Birthday</th>
+                    <th class="text-center" style="border: 0.5px solid #161b22">Salary</th>
+                    <th class="text-center" style="border: 0.5px solid #161b22">Actions</th>
                 </tr>
             </thead>
-            <tbody style="background: #0d1117; color: #8B949E;border: 0.2px solid #8B949E; ">
+            <tbody style="color: #8B949E; border: 0.2px solid #161b22;  ">
                 <tr ng-repeat="c in Teachers">
                     <td class="text-center">{{c.TeacherId}}</td>
                     <td class="text-center">{{c.Name}}</td>
-                    <td class="text-center">{{c.Birthday}}</td>
-                    <td class="text-center">{{c.Salary}}</td>
-                    <td class="text-center" style="width: 200px;">
-                        <a href="#" style="border-radius: 25px;"
+                    <td class="text-center">{{c.Birthday  | date : format : timezone}}</td>
+                    <td class="text-center">{{c.Salary  | currency : symbol : fractionSize}}</td>
+                    <td class="text-center buttons" style="width: 200px;">
+                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;"
                            data-target="#AtualizarFuncionario"
                            data-toggle="modal" class="btn btn-success"
                            ng-click="atualizarFuncionarioPorId(func)">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a href="#" style="border-radius: 25px;"
+                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;"
                            data-target="#ExcluirFuncionario"
                            id="btnExcluir"
                            data-toggle="modal" class="btn btn-danger"
@@ -40,7 +40,10 @@
                 </tr>
             </tbody>
         </table>
-        <div class="modal" id="AdicionarFuncionario" role="dialog" style="width: 100%; padding-top: 8rem;">
+
+
+
+        <div class="modal" id="AdicionarFuncionario" role="dialog" style="width: 100%; padding-top: 12rem;">
             <div class="modal-dialog" style="width: 40%; margin-top: 4%;">
                 <div class="modal-content" style="background: #0d1117;">
                     <div class="modal-header">
@@ -48,31 +51,31 @@
                     </div>
                     <div class="modal-body">
                         <form class="form-horizontal" name="AdicionarNovoFuncionarioForm">
-                            <div class="form-group" style="width: 100%; background: green;">
+                            <div class="form-group" style="width: 100%;">
                                 <input class="form-control" readonly="readonly" name="funcionarioId" type="hidden" placeholder="Id Funcionário" style="margin: auto; min-width: 300px;" />
                             </div>
 
                             <div class="form-group">
-                                <input class="form-control" type="text" name="nome" ng-model="description" placeholder="Description" style="width:100%;" />
+                                <input class="form-control" type="text" name="nome" ng-model="name" placeholder="Name" style="width:100%;" />
                             </div>
                             <div class="form-group">
-                                <input class="form-control" type="text" name="nome" ng-model="duration" placeholder="Duration" />
+                                <input class="form-control" type="date" name="nome" ng-model="birthday" placeholder="Birthday" />
                             </div>
                             <div class="form-group">
-                                <input class="form-control" type="text" name="nome" ng-model="minGrade" placeholder="Min. Grade" />
+                                <input class="form-control" type="text" name="nome" ng-model="salary" placeholder="Salary" />
                             </div>
                         </form>
                     </div>
                     <div class="modal-footer" style="border: none;">
-                        <button type="button" class="btn btn-primary" id="btnSalvar" data-dismiss="modal" ng-click="addCourse()">Confirm</button>
+                        <button type="button" class="btn btn-primary" id="btnSalvar" data-dismiss="modal" ng-click="addTeacher()">Confirm</button>
                         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="limparDados()">Cancel</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="modal" id="AtualizarFuncionario" role="dialog">
+        <div class="modal" id="AtualizarFuncionario" role="dialog" style="margin-top: 11em;">
             <div class="modal-dialog">
-                <div class="modal-content">
+                <div class="modal-content" style="background: #0d1117; color: whitesmoke;">
                     <div class="modal-header">
                         <h3 class="text-info">Edit Teacher</h3>
                     </div>
@@ -82,20 +85,16 @@
                                 <input class="form-control" readonly="readonly" name="FuncionarioId" ng-model="AtualizadoFuncionarioId" type="hidden" placeholder="Funcionario Id" />
                             </div>
                             <div class="form-group">
-                                <label class="text-info"> Nome</label>
-                                <input class="form-control" name="Nome" ng-model="AtualizadoNome" type="text" placeholder="Nome" />
+                                <label class="text-info"> Name</label>
+                                <input class="form-control" name="Nome" ng-model="AtualizadoNome" type="text" placeholder="Name" />
                             </div>
                             <div class="form-group">
-                                <label class="text-info"> Email</label>
-                                <input class="form-control" name="Email" ng-model="AtualizadoEmail" type="email" placeholder="Email" />
+                                <label class="text-info"> Birthday</label>
+                                <input class="form-control" name="Email" ng-model="AtualizadoEmail" type="date" placeholder="Birthday" />
                             </div>
                             <div class="form-group">
-                                <label class="text-info"> Departamento</label>
-                                <input class="form-control" name="Departamento" ng-model="AtualizadoDepartamento" type="text" placeholder="Departamento" />
-                            </div>
-                            <div class="form-group">
-                                <label class="text-info"> Cargo</label>
-                                <input class="form-control" name="Cargo" ng-model="AtualizadoCargo" type="text" placeholder="Cargo" />
+                                <label class="text-info"> Salary</label>
+                                <input class="form-control" name="Departamento" ng-model="AtualizadoDepartamento" type="text" placeholder="Salary" />
                             </div>
                         </form>
                     </div>
@@ -137,6 +136,22 @@
 }
 
 <style>
+
+    ::-webkit-scrollbar {
+        width: 12px;
+    }
+
+    ::-webkit-scrollbar-track {
+        border-radius: 10px;
+    }
+    ::-webkit-scrollbar-thumb {
+        background: #161b22;
+        border-radius: 10px;
+    }
+        ::-webkit-scrollbar-thumb:hover {
+            background: green;
+        }
+
     .form-group {
         width: 100%;
     }
@@ -144,5 +159,35 @@
     input {
         min-width: 70%;
         margin: auto;
+        border-radius: 25px !important;
+    }
+
+    td {
+        border: none;
+        font-size: 0.9em;
+        height: 5rem !important;
+        padding-top: 1.6em !important;
+    }
+
+    .buttons {
+        padding: 1.2rem !important;
+    }
+
+    th {
+        font-weight: 300;
+    }
+
+    label {
+        color: whitesmoke !important;
+        font-weight: 300;
+        font-size: 0.9em !important;
+        margin-left: 6.1em;
+    }
+
+    select {
+        min-width: 70%;
+        margin: auto;
+        width: 100%;
+        border-radius: 25px !important;
     }
 </style>
