--- a/CollegeManager/Views/Home/Grades.cshtml
+++ b/CollegeManager/Views/Home/Grades.cshtml
@@ -2,7 +2,7 @@
     <div class="panel" style="background-color: #161b22; ">
         <div class="panel-heading" style="border: none; background: #161b22; color: #C9D1D9;">Grades</div>
         <div class="panel-body" style="background: #0d1117; color: #8B949E;">
-            <button type="button" class="btn btn-info" data-target="#AdicionarFuncionario" data-toggle="modal" style="border-radius: 25px; width: 38px;">
+            <button type="button" class="btn btn-primary"  data-target="#AdicionarFuncionario" data-toggle="modal" style="border-radius: 25px; width: 38px;">
                 <span class="glyphicon glyphicon-plus"></span>
             </button>
         </div>
@@ -22,7 +22,7 @@
                     <td class="text-center">{{c.Name}}</td>
                     <td class="text-center">{{c.Birthday}}</td>
                     <td class="text-center">{{c.Salary}}</td>
-                    <td class="text-center buttons" style="width: 200px;">
+                    <td class="text-center" style="width: 150px; padding: 0.5%;">
                         <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;"
                            data-target="#AtualizarFuncionario"
                            data-toggle="modal" class="btn btn-success"
