--- a/CollegeManager/Views/Home/Subjects.cshtml
+++ b/CollegeManager/Views/Home/Subjects.cshtml
@@ -4,7 +4,7 @@
         <div class="panel-heading" style="border: none; background: #161b22; color: #C9D1D9;">Subjects</div>
 
         <div class="panel-body" style="background: #0d1117; color: #161b22;">
-            <button type="button" class="btn btn-info" data-target="#AdicionarFuncionario" data-toggle="modal" style="border-radius: 25px; width: 38px;">
+            <button type="button" class="btn btn-primary"  data-target="#AdicionarFuncionario" data-toggle="modal" style="border-radius: 25px; width: 38px;">
                 <span class="glyphicon glyphicon-plus"></span>
             </button>
         </div>
@@ -12,21 +12,21 @@
         <table class="table" style="background: #0d1117; color: #8B949E; border: 0.2px solid #161b22; ">
             <thead style="background-color: #161b22; border: none; color: white; ">
                 <tr>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Course Id</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Description</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Duration</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Min. Grade</th>
+                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">ID</th>
+                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Name</th>
+                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">CourseId</th>
+                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Approved</th>
                     <th class="text-center" style="border-bottom: 0.5px solid #161b22">Actions</th>
                 </tr>
             </thead>
 
             <tbody style="background: #0d1117; color: #8B949E; border: 0.2px solid #161b22; ">
-                <tr ng-repeat="c in Courses">
+                <tr ng-repeat="c in Subjects">
+                    <td class="text-center">{{c.SubjectId}}</td>
+                    <td class="text-center">{{c.Name}}</td>
                     <td class="text-center">{{c.CourseId}}</td>
-                    <td class="text-center">{{c.Description}}</td>
-                    <td class="text-center">{{c.Duration}}</td>
-                    <td class="text-center">{{c.MinGrade}}</td>
-                    <td class="text-center buttons" style="width: 200px;">
+                    <td class="text-center">{{c.Approved}}</td>
+                    <td class="text-center" style="width: 150px; padding: 0.5%;">
                         <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;"
                            data-target="#AtualizarFuncionario"
                            data-toggle="modal" class="btn btn-success"
@@ -149,9 +149,9 @@
 </div>
 
 @section scripts {
-    <script src="~/AngularJsApp/Courses/Module.js"></script>
-    <script src="~/AngularJsApp/Courses/Service.js"></script>
-    <script src="~/AngularJsApp/Courses/Controller.js"></script>
+    <script src="~/AngularJsApp/Subject/Module.js"></script>
+    <script src="~/AngularJsApp/Subject/Service.js"></script>
+    <script src="~/AngularJsApp/Subject/Controller.js"></script>
 }
 
 <style>
