Variables binding, controller and html.

--- a/CollegeManager/Views/Home/Student.cshtml
+++ b/CollegeManager/Views/Home/Student.cshtml
@@ -47,7 +47,7 @@
             <div class="modal-dialog" style="width: 40%; margin-top: 4%;">
                 <div class="modal-content" style="background: #0d1117;">
                     <div class="modal-header">
-                        <h3 style="color: #C9D1D9;">New Teacher</h3>
+                        <h3 style="color: #C9D1D9;">New Student</h3>
                     </div>
                     <div class="modal-body">
                         <form class="form-horizontal" name="AdicionarNovoFuncionarioForm">
@@ -56,10 +56,10 @@
                             </div>
 
                             <div class="form-group">
-                                <input class="form-control" type="text" name="nome" ng-model="description" placeholder="Description" style="width:100%;" />
+                                <input class="form-control" type="text" name="nome" ng-model="name" placeholder="Name" style="width:100%;" />
                             </div>
                             <div class="form-group">
-                                <input class="form-control" type="text" name="nome" ng-model="duration" placeholder="Duration" />
+                                <input class="form-control" type="text" name="nome" ng-model="birthday" placeholder="Birthday" />
                             </div>
                             <div class="form-group">
                                 <input class="form-control" type="text" name="nome" ng-model="minGrade" placeholder="Min. Grade" />
@@ -77,7 +77,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h3 class="text-info">Edit Teacher</h3>
+                        <h3 class="text-info">Edit Student</h3>
                     </div>
                     <div class="modal-body" style="margin-left: 20px">
                         <form class="form-horizontal" name="AtualizarForm">
