--- a/CollegeManager/Views/Home/Index.cshtml
+++ b/CollegeManager/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron" style=" width: 65%; margin: auto; margin-bottom: 5rem; ">
     <h1>College Manager</h1>
     <p class="lead">College Manager is a free web app for manage great Universities around the world</p>
-    <p><a style="margin-top: 2%;" href="https://asp.net" class="btn btn-primary btn-lg">Start Managing &raquo;</a></p>
+    <p><a style="margin-top: 2%;" href="~/Teacher/" class="btn btn-primary btn-lg">Start Managing</a></p>
 </div>
 
 <div class="row" style="margin-top: 3em;width: 65%; margin: auto;">
@@ -14,17 +14,17 @@
         <p>
             With college manager you can register professors, courses, subjects and students!
         </p>
-        <p style="margin-top: 2em;"><a class="btn btn-default" href="~/Teacher/">Teacher registration &raquo;</a></p>
+        <p style="margin-top: 2em;"><a class="btn btn-default" href="~/Teacher/">Teacher registration</a></p>
     </div>
     <div class="col-md-4">
         <h2>Get more courses</h2>
         <p>You can register as many courses as you need, linking them with professors and subjects.</p>
-        <p  style="margin-top: 2em;"><a class="btn btn-default" href="~/Home/Course">Check out courses &raquo;</a></p>
+        <p  style="margin-top: 2em;"><a class="btn btn-default" href="~/Home/Course">Check out courses</a></p>
     </div>
     <div class="col-md-4">
         <h2>Watch the performance</h2>
         <p>With the college manager you can follow the performance of your students.</p>
-        <p style="margin-top: 2em;"><a class="btn btn-default" href="~/Home/Grades"> Follow the permormance' &raquo;</a></p>
+        <p style="margin-top: 2em;"><a class="btn btn-default" href="~/Home/Grades"> Follow the permormance</a></p>
     </div>
 </div>
 
