--- a/CollegeManager/Views/Home/Student.cshtml
+++ b/CollegeManager/Views/Home/Student.cshtml
@@ -1,8 +1,8 @@
-﻿<div class="container" ng-app="students" ng-controller="studentCtrl" style="width: 70%; height: 75rem; background-color: #0d1117; padding:1%;">
+﻿<div class="container" ng-app="students" ng-controller="studentCtrl" style="width: 80%; height: 75rem;  background-color: #0d1117; border-radius: 10px; padding: 1.3% 0.2% 0.2% 1%; overflow-y: scroll;">
     <div class="panel" style="background: #161b22; ">
         <div class="panel-heading" style="border: none; background: #161b22; color: #C9D1D9;">Students</div>
         <div class="panel-body" style="background: #0d1117; color: #8B949E;">
-            <button type="button" class="btn btn-primary"  data-target="#AdicionarFuncionario" data-toggle="modal" style="border-radius: 25px; width: 38px;">
+            <button type="button" class="btn btn-primary" data-target="#AdicionarFuncionario" data-toggle="modal" style="border-radius: 25px; width: 38px;">
                 <span class="glyphicon glyphicon-plus"></span>
             </button>
         </div>
@@ -23,7 +23,7 @@
                     <td class="text-center">{{c.Name}}</td>
                     <td class="text-center">{{c.Birthday}}</td>
                     <td class="text-center">{{c.RgNumber}}</td>
-                    <td class="text-center">{{c.CourseId}}</td>
+                    <td class="text-center">{{c.CourseName}}</td>
 
                     <td class="text-center" style="width: 150px; padding: 0.5%;">
                         <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;"
@@ -62,7 +62,7 @@
                                 <input class="form-control" type="date" name="nome" ng-model="birthday" placeholder="Birthday" />
                             </div>
                             <div class="form-group">
-                                <input class="form-control" type="text"  name="nome" ng-model="rgnumber" placeholder="Registration Number" />
+                                <input class="form-control" type="text" name="nome" ng-model="rgnumber" placeholder="Registration Number" />
                             </div>
                             <div class="form-group">
                                 <input class="form-control" type="text" name="nome" ng-model="courseid" placeholder="Course" />
@@ -140,9 +140,30 @@
     <script src="~/AngularJsApp/Student/Module.js"></script>
     <script src="~/AngularJsApp/Student/Service.js"></script>
     <script src="~/AngularJsApp/Student/Controller.js"></script>
-}
+    <script src="~/AngularJsApp/Courses/Module.js"></script>
+    <script src="~/AngularJsApp/Courses/Service.js"></script>
+    <script src="~/AngularJsApp/Courses/Controller.js"></script>
+    }
 
 <style>
+
+    ::-webkit-scrollbar {
+        width: 12px;
+    }
+
+    ::-webkit-scrollbar-track {
+        border-radius: 10px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: #161b22;
+        border-radius: 10px;
+    }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: green;
+        }
+
     .form-group {
         width: 100%;
     }
@@ -150,11 +171,11 @@
     input {
         min-width: 70%;
         margin: auto;
+        border-radius: 25px !important;
     }
 
     td {
-        border: none;
-        font-size: 0.9em;
+        border: 0.5px solid #161b22;
         height: 5rem !important;
         padding-top: 1.6em !important;
     }
@@ -164,7 +185,20 @@
     }
 
     th {
-        font-size: 0.98em;
         font-weight: 300;
+    }
+
+    label {
+        color: whitesmoke !important;
+        font-weight: 300;
+        font-size: 0.9em !important;
+        margin-left: 6.1em;
+    }
+
+    select {
+        min-width: 70%;
+        margin: auto;
+        width: 100%;
+        border-radius: 25px !important;
     }
 </style>
