--- a/CollegeManager/Views/Teacher/Index.cshtml
+++ b/CollegeManager/Views/Teacher/Index.cshtml
@@ -1,10 +1,11 @@
-﻿<div class="container" ng-app="teachers" ng-controller="teacherCtrl" style="width: 70%; height: 75rem; background-color: #0d1117; padding: 1%; overflow-y: scroll;">
+﻿<div class="container" ng-app="teachers" ng-controller="teacherCtrl" style="width: 80%; height: 75rem;  background-color: #0d1117; border-radius: 10px; padding: 1.3% 0.2% 0.2% 1%; overflow-y: scroll;">
     <div class="panel" style="background: #161b22;">
         <div class="panel-heading" style="border: none; background: #161b22; color: #C9D1D9;">Teachers</div>
         <div class="panel-body" style="background: #0d1117; color: #8B949E; ">
             <button type="button" class="btn btn-primary" data-target="#AdicionarFuncionario" data-toggle="modal" style="border-radius: 25px; width: 38px;">
                 <span class="glyphicon glyphicon-plus"></span>
             </button>
+            <input id="search" shadow-none ng-model="test" style="background: #0a0d12; height: 30px; margin-left: 10em; width: 100%; border: none; padding: 1.5%; " placeholder="Search for a teacher..."  type="text"/>
         </div>
         <table class="table" style="background: #0d1117; color: #8B949E; border: 0.2px solid #161b22; ">
             <thead style="background-color: #161b22; border: none; color: white; ">
@@ -17,10 +18,10 @@
                 </tr>
             </thead>
             <tbody style="color: #8B949E; border: 0.2px solid #161b22;  ">
-                <tr ng-repeat="t in Teachers">
-                    <td class="text-center">{{t.TeacherId}}</td>
+                <tr ng-repeat="t in Teachers | filter:test">
+                    <td class="text-center" style="border-right: 0.5px solid #161b22 !important;">{{t.TeacherId}}</td>
                     <td class="text-center">{{t.Name}}</td>
-                    <td class="text-center">{{t.Birthday  | date : format : timezone}}</td>
+                    <td class="text-center">{{t.Birthday | date }}</td>
                     <td class="text-center">{{t.Salary  | currency : symbol : fractionSize}}</td>
                     <td class="text-center" style="width: 150px; padding: 0.5%;">
                         <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;" data-target="#UpdateTeacher" data-toggle="modal" class="btn btn-success" ng-click="updateTeacherById(t)">
@@ -124,7 +125,6 @@
 }
 
 <style>
-
     ::-webkit-scrollbar {
         width: 12px;
     }
@@ -153,8 +153,7 @@
     }
 
     td {
-        border: none;
-        font-size: 0.9em;
+        border-bottom: 0.5px solid #161b22;
         height: 5rem !important;
         padding-top: 1.6em !important;
     }
@@ -179,5 +178,9 @@
         margin: auto;
         width: 100%;
         border-radius: 25px !important;
+    }
+
+    #search:focus {
+        outline: none;
     }
 </style>
