--- a/CollegeManager/Views/Home/Student.cshtml
+++ b/CollegeManager/Views/Home/Student.cshtml
@@ -1,60 +1,58 @@
 ﻿<div class="container" ng-app="students" ng-controller="studentCtrl" style="width: 80%; height: 75rem;  background-color: #0d1117; border-radius: 10px; padding: 1.3% 0.2% 0.2% 1%; overflow-y: scroll;">
-    <div class="panel" style="background: #161b22; ">
+    <div class="panel" style="background: #161b22;">
+
         <div class="panel-heading" style="border: none; background: #161b22; color: #C9D1D9;">Students</div>
-        <div class="panel-body" style="background: #0d1117; color: #8B949E;">
-            <button type="button" class="btn btn-primary" data-target="#AdicionarFuncionario" data-toggle="modal" style="border-radius: 25px; width: 38px;">
+
+        <div class="panel-body" style="background: #0d1117; color: #8B949E; ">
+            <button id="add" type="button" class="btn btn-primary" shadow-none data-target="#AddStudent" data-toggle="modal" style="border-radius: 25px; width: 38px;">
                 <span class="glyphicon glyphicon-plus"></span>
             </button>
+            <input id="search" shadow-none ng-model="test" style="background: #0a0d12; height: 30px; margin-left: 10em; width: 100%; border: none; padding: 1.5%; " placeholder="Search for a student..." type="text" />
         </div>
+
+        @*LIST*@
         <table class="table" style="background: #0d1117; color: #8B949E; border: 0.2px solid #161b22; ">
             <thead style="background-color: #161b22; border: none; color: white; ">
                 <tr>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">ID</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Name</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Birthday</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Registration Number</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Course</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Actions</th>
+                    <th class="text-center" style="border: 0.5px solid #161b22">ID</th>
+                    <th class="text-center" style="border: 0.5px solid #161b22">Name</th>
+                    <th class="text-center" style="border: 0.5px solid #161b22">Birthday</th>
+                    <th class="text-center" style="border: 0.5px solid #161b22">Registration Number</th>
+                    <th class="text-center" style="border: 0.5px solid #161b22">Course</th>
+                    <th class="text-center" style="border: 0.5px solid #161b22">Actions</th>
                 </tr>
             </thead>
-            <tbody style="background: #0d1117; color: #8B949E; border: 0.2px solid #161b22; ">
-                <tr ng-repeat="c in Students">
-                    <td class="text-center">{{c.StudentId}}</td>
-                    <td class="text-center">{{c.Name}}</td>
-                    <td class="text-center">{{c.Birthday}}</td>
-                    <td class="text-center">{{c.RgNumber}}</td>
-                    <td class="text-center">{{c.CourseName}}</td>
-
+            <tbody style="color: #8B949E; border: 0.2px solid #161b22;  ">
+                <tr ng-repeat="t in Students | filter:test">
+                    <td class="text-center" style="border-right: 0.5px solid #161b22 !important;">{{t.StudentId}}</td>
+                    <td class="text-center">{{t.Name}}</td>
+                    <td class="text-center">{{t.Birthday | date }}</td>
+                    <td class="text-center">{{t.RgNumber}}</td>
+                    <td class="text-center">{{t.CourseName}}</td>
                     <td class="text-center" style="width: 150px; padding: 0.5%;">
-                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;"
-                           data-target="#AtualizarFuncionario"
-                           data-toggle="modal" class="btn btn-success"
-                           ng-click="atualizarFuncionarioPorId(func)">
+                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;" data-target="#UpdateStudent" data-toggle="modal" class="btn btn-success" ng-click="updateStudentById(t)">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em;"
-                           data-target="#ExcluirFuncionario"
-                           id="btnExcluir"
-                           data-toggle="modal" class="btn btn-danger"
-                           ng-click="excluirFuncionarioPorId(func)">
+                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;" data-target="#DeleteStudent" id="btnDelete" data-toggle="modal" class="btn btn-danger" ng-click="deleteStudentById(t)">
                             <span class="glyphicon glyphicon-trash"></span>
                         </a>
                     </td>
                 </tr>
             </tbody>
         </table>
-        <div class="modal" id="AdicionarFuncionario" role="dialog" style="width: 100%; padding-top: 8rem;">
+
+        @*ADD STUDENT*@
+        <div class="modal" id="AddStudent" role="dialog" style="width: 100%; padding-top: 12rem;">
             <div class="modal-dialog" style="width: 40%; margin-top: 4%;">
                 <div class="modal-content" style="background: #0d1117;">
-                    <div class="modal-header">
+                    <div class="modal-header" style="border: none;">
                         <h3 style="color: #C9D1D9;">New Student</h3>
                     </div>
                     <div class="modal-body">
                         <form class="form-horizontal" name="AdicionarNovoFuncionarioForm">
-                            <div class="form-group" style="width: 100%; background: green;">
-                                <input class="form-control" readonly="readonly" name="funcionarioId" type="hidden" placeholder="Id Funcionário" style="margin: auto; min-width: 300px;" />
+                            <div class="form-group" style="width: 100%;">
+                                <input class="form-control" readonly="readonly" name="studentId" type="hidden" placeholder="Student Id" style="margin: auto; min-width: 300px;" />
                             </div>
-
                             <div class="form-group">
                                 <input class="form-control" type="text" name="nome" ng-model="name" placeholder="Name" style="width:100%;" />
                             </div>
@@ -65,74 +63,75 @@
                                 <input class="form-control" type="text" name="nome" ng-model="rgnumber" placeholder="Registration Number" />
                             </div>
                             <div class="form-group">
-                                <input class="form-control" type="text" name="nome" ng-model="courseid" placeholder="Course" />
+                                <input class="form-control" type="text" name="nome" ng-model="courseid" placeholder="CourseID" />
                             </div>
                         </form>
                     </div>
                     <div class="modal-footer" style="border: none;">
-                        <button type="button" class="btn btn-primary" id="btnSalvar" data-dismiss="modal" ng-click="addStudent()">Confirm</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clearData()">Cancel</button>
+                        <button type="button" class="btn btn-primary" shadow-none id="btnSave" data-dismiss="modal" ng-click="addStudent()">Confirm</button>
+                        <button type="button" class="btn btn-default" id="btnSave" data-dismiss="modal" ng-click="clearData()">Close</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="modal" id="AtualizarFuncionario" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="text-info">Edit Teacher</h3>
+
+        @*UPDATE STUDENT*@
+        <div class="modal" id="UpdateStudent" role="dialog" style="width: 100%; margin-top: 12rem;">
+            <div class="modal-dialog" style="width: 40%; margin-top: 4%;">
+                <div class="modal-content" style="background: #0d1117; color: whitesmoke;">
+                    <div class="modal-header" style="border: none;">
+                        <h3 style="color: #C9D1D9;">Update Student</h3>
                     </div>
                     <div class="modal-body" style="margin-left: 20px">
                         <form class="form-horizontal" name="AtualizarForm">
                             <div class="form-group">
-                                <input class="form-control" readonly="readonly" name="FuncionarioId" ng-model="AtualizadoFuncionarioId" type="hidden" placeholder="Funcionario Id" />
+                                <input class="form-control" readonly="readonly" name="StudentId" ng-model="UpdatedStudentId" type="hidden" placeholder="TeacherId" />
                             </div>
                             <div class="form-group">
-                                <label class="text-info"> Nome</label>
-                                <input class="form-control" name="Nome" ng-model="AtualizadoNome" type="text" placeholder="Nome" />
+                                <input class="form-control" name="Name" ng-model="UpdatedName" type="text" placeholder="Name" />
                             </div>
                             <div class="form-group">
-                                <label class="text-info"> Email</label>
-                                <input class="form-control" name="Email" ng-model="AtualizadoEmail" type="email" placeholder="Email" />
+                                <input class="form-control" name="Birthday" ng-model="UpdatedBirthday" type="date" placeholder="Birthday" />
                             </div>
                             <div class="form-group">
-                                <label class="text-info"> Departamento</label>
-                                <input class="form-control" name="Departamento" ng-model="AtualizadoDepartamento" type="text" placeholder="Departamento" />
+                                <input class="form-control" name="Salary" ng-model="UpdatedRgNumber" type="text" placeholder="Registration Number" />
                             </div>
                             <div class="form-group">
-                                <label class="text-info"> Cargo</label>
-                                <input class="form-control" name="Cargo" ng-model="AtualizadoCargo" type="text" placeholder="Cargo" />
+                                <input class="form-control" name="Salary" ng-model="UpdatedCourseId" type="text" placeholder="CourseID" />
                             </div>
                         </form>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" id="btnUpdate" data-dismiss="modal" ng-click="atualizarFuncionario()">
-                            Atualizar
+                    <div class="modal-footer" style="border: none;">
+                        <button type="button" id="btnSave" class="btn btn-primary" data-dismiss="modal" ng-click="updateStudent()">
+                            Update
                         </button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                        <button type="button" id="btnSave" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="modal" role="dialog" id="ExcluirFuncionario">
+
+        @*DELETE STUDENT*@
+        <div class="modal" role="dialog" id="DeleteStudent" style="padding-top: 13em;">
             <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="text-info">Você tem certeza que deseja excluir o Funcionário?</h3>
+                <div class="modal-content" style="background: #0d1117;">
+                    <div class="modal-header" style="border: none; margin-top: 3em;">
+                        <h4 class="text-info" style="color: white; text-align: center;">Are you sure you want to delete this student?</h4>
                     </div>
                     <div class="modal-body">
-                        <div>
-                            <p>Id do Funcionário : {{AtualizadoFuncionarioId}}</p>
-                            <p>Nome do Fucionário : {{AtualizadoNome}}</p>
+                        <div style="color: white; text-align: center;">
+                            <p>ID: {{UpdatedStudentId}}</p>
+                            <p>Student's name: {{UpdatedName}}</p>
                         </div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="excluirFuncionario(AtualizadoFuncionarioId)">Excluir</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                    <div class="modal-footer" style="border: none;">
+                        <button type="button" id="btnSave" class="btn btn-danger" data-dismiss="modal" ng-click="deleteStudent(UpdatedStudentId)">Delete</button>
+                        <button type="button" id="btnSave" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
@@ -140,13 +139,9 @@
     <script src="~/AngularJsApp/Student/Module.js"></script>
     <script src="~/AngularJsApp/Student/Service.js"></script>
     <script src="~/AngularJsApp/Student/Controller.js"></script>
-    <script src="~/AngularJsApp/Courses/Module.js"></script>
-    <script src="~/AngularJsApp/Courses/Service.js"></script>
-    <script src="~/AngularJsApp/Courses/Controller.js"></script>
-    }
+}
 
 <style>
-
     ::-webkit-scrollbar {
         width: 12px;
     }
@@ -168,6 +163,11 @@
         width: 100%;
     }
 
+    .modal-footer {
+        text-align: center;
+        margin-bottom: 3em;
+    }
+
     input {
         min-width: 70%;
         margin: auto;
@@ -175,9 +175,22 @@
     }
 
     td {
-        border: 0.5px solid #161b22;
+        border-bottom: 0.5px solid #161b22;
         height: 5rem !important;
         padding-top: 1.6em !important;
+    }
+
+    #btnSave {
+        width: 15rem;
+        border: none;
+    }
+
+        #btnSave:focus {
+            outline: none;
+        }
+
+    #add:focus {
+        outline: none;
     }
 
     .buttons {
@@ -200,5 +213,9 @@
         margin: auto;
         width: 100%;
         border-radius: 25px !important;
+    }
+
+    #search:focus {
+        outline: none;
     }
 </style>
