--- a/CollegeManager/Views/Shared/_Layout.cshtml
+++ b/CollegeManager/Views/Shared/_Layout.cshtml
@@ -21,11 +21,13 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Dashboard", "Index", "Dashboard")</li>
                     <li>@Html.ActionLink("Teacher", "Index", "Teacher")</li>
                     <li>@Html.ActionLink("Students", "Student", "Home")</li>
                     <li>@Html.ActionLink("Course", "Course", "Home")</li>
                     <li>@Html.ActionLink("Subjects", "Subjects", "Home")</li>
                     <li>@Html.ActionLink("Grades", "Grades", "Home")</li>
+                    <li>@Html.ActionLink("Guide", "Index", "Guide")</li>
                 </ul>
             </div>
         </div>
@@ -36,7 +38,7 @@
             <p style="color: white;">&copy; @DateTime.Now.Year Débora Ferreira@MagniFinance</p>
         </footer>
     </div>
-    
+
     @Scripts.Render("~/bundles/angular");
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
